- removed guava and openbeans